fix alignement issue with references on topicPage

--- a/src/core/pages/topic/components/css/references.module.css
+++ b/src/core/pages/topic/components/css/references.module.css
@@ -14,6 +14,7 @@
     font-size: 30pt;
     font-weight: bold;
     padding: 0.5em 2em;
+    width: 10em;
     margin: 2em;
     border: 1.5px solid var(--secondary-dark-gray);
 }
